# rusty-cpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CTestTestfile.cmake  Cargo.toml  README.md  TODO.md  btree_vs_rust  build.rs  example.cpp  final_btree_test  install.sh  run_tests.sh  rust-toolchain.toml  test_all_types  test_btreemap  test_btreeset  test_debug  test_if_both.cpp  test_member.cpp  test_nested_if.cpp  test_nested_loops.cpp  test_pattern.rs  test_real_btree  test_struct_debug.cpp  test_struct_decl.cpp
.cargo/: config.toml
.github/workflows/: ci.yml
.rusty-parity-matrix-current/arrayvec/: baseline.txt  runner
.rusty-parity-matrix-current/arrayvec-gdb/: baseline.txt
.rusty-parity-matrix-current/bitflags/: baseline.txt
.rusty-parity-matrix-current/cfg-if/: baseline.txt
.rusty-parity-matrix-current/either/: baseline.txt  runner  runner.cpp
.rusty-parity-matrix-current/itertools/: baseline.txt  runner.cpp
.rusty-parity-matrix-current/non_toml-either/: baseline.txt  runner  runner.cpp
.rusty-parity-matrix-current/once_cell/: baseline.txt  runner  runner.cpp
.rusty-parity-matrix-current/pollster/: baseline.txt  runner  runner.cpp
.rusty-parity-matrix-current/semver/: baseline.txt  runner.cpp
.rusty-parity-matrix-current/serde/: baseline.txt  runner  runner.cpp
.rusty-parity-matrix-current/serde_core/: baseline.txt  runner  runner.cpp
.rusty-parity-matrix-current/smallvec/: baseline.txt
.rusty-parity-matrix-current/take_mut/: baseline.txt  runner.cpp
.rusty-parity-matrix-current/tap/: baseline.txt
.rusty-parity-matrix-current/toml-continue10/: runner.cpp
.rusty-parity-matrix-current/toml-continue12/: runner.cpp
cmake/: CppBorrowChecker.cmake  README.md  RustyCppSubmodule.cmake  RustyCppTranspiler.cmake
cmake-example-project/: CMakeLists.txt  README.md
cmake-example-project/interop/cpp/: interop.host.cppm
cmake-example-project/interop/rust/: member_bridge.rs
cmake-example-project/src/: cpp_module_index.toml  inline_header_example.hpp  inline_local_example.cpp  interop_main.cpp  main.cpp  safe_example.cpp
cmake-example-project/tests/: run_cpp_rust_member_interop.sh  run_cpp_rust_member_interop_test.cmake
docs/: .unified_annotations.md.swp  FULL_POINTER_SAFETY_PLAN.md  IMPL_PLAN_POINTER_SAFETY.md  KNOWN_LIMITATIONS.md  RAII_TRACKING.md  RUST_COMPARISON.md  TODO-archive.md  TODO-misc.md  _gen_test_stub.py  _test_port_helpers.py  annotation_reference.md  annotations.md  blog.md  bug_report_cell_const_propagation.md  bug_report_checking_unannotated_headers.md  bug_report_this_borrow_false_positives.md  external_annotations.md  function_pointer_safety.md  index.md  inheritance_safety.md  inline_lifetime_annotations.md  method_qualifiers.md  mixed_pointer_reference_borrow_plan.md  mpsc_lockfree_developer_guide.md  mpsc_lockfree_user_guide.md  partial_borrows.md  pointer_safety.md  raii_tracking.md  reference_semantics.md  rusty-cpp-book.md  rusty-cpp-transpiler.md  rusty-std-book.md  std_collection_tests_status.md  std_removal_migration_plan.md  stl_lifetimes.md  unified_annotations.md
docs/alloc/: build.sh  (+4 more)
examples/: channel_demo.cpp  inline_lifetime_demo.cpp  lockfree_blocking_demo.cpp  lockfree_channel_demo.cpp  mpsc_demo.cpp  rusty_idiomatic_demo.cpp  rusty_types_demo.cpp  safety_rules_demo.cpp  send_comparison.cpp  send_explicit_optin_demo.cpp  send_hybrid_debug.cpp  send_hybrid_demo.cpp  send_trait_demo.cpp  send_trait_error_test.cpp  std_safety_demo.cpp  sync_primitives_demo.cpp  test_arc_ffi.cpp  test_compositional_safety.cpp  test_option_as_ref.cpp  test_option_borrow_checking.cpp  test_rc_rejected.cpp  test_rusty_safety.cpp  third_party_check.cpp  undeclared_calling_demo.cpp
include/: external_annotations.hpp  std_annotation.hpp  stl_lifetimes.hpp  unified_external_annotations.hpp
src/: annotator.rs  debug_macros.rs  lib.rs  main.rs
test/: btreemap_analysis  btreemap_analysis.cpp  final_btree_test  final_performance_test  run_all_new_tests.sh  rusty_btreemap_test  rusty_btreemap_test.cpp  rusty_btreeset_test  rusty_btreeset_test.cpp  rusty_hashmap_test  rusty_hashset_test  rusty_hashset_test.cpp  rusty_string_test  rusty_string_test.cpp  test_all_types  test_all_types.cpp  test_external_annotations.cpp  test_stl_lifetimes.cpp
tests/: arc_port_module_test.cpp  arc_tests_port_module_test.cpp  ascii_port_module_test.cpp  async_module_test.cpp  benchmark_lockfree.cpp  binary_heap_port_advanced_test.cpp  binary_heap_port_comprehensive_test.cpp  binary_heap_port_full_api_test.cpp  binary_heap_port_iter_test.cpp  binary_heap_port_module_test.cpp  binary_heap_port_pop_test.cpp  binary_heap_port_push_test.cpp  binary_heap_tests_port_module_test.cpp  borrow_port_module_test.cpp  btree_port_facade_test.cpp  btree_port_iter_remove_movonly_test.cpp  btree_port_module_test.cpp  btree_port_set_module_test.cpp  btree_set_hash_tests_port_module_test.cpp  btree_testing_helpers.hpp  btree_tests_port_module_test.cpp  btree_tests_port_unstubbed.cpp  btreemap_no_default_test.cpp  cell_port_module_test.cpp  dispatch_test.cpp  eq_diff_len_tests_port_module_test.cpp  final_btree_test.cpp  final_performance_test.cpp  hashbrown_port_map_test.cpp  hashbrown_port_set_test.cpp  hashset_set_algebra_test.cpp  integration_test.rs  linked_list_port_module_test.cpp  linked_list_tests_port_module_test.cpp  raii_integration_tests.rs  rc_port_module_test.cpp  rc_tests_port_module_test.cpp  run_cpp_tests.sh  run_rusty_tests.sh  rusty_arc_mt_test.cpp  (+161 more)
tools/: rustycpp-inline  std_audit_cpp.sh
transpiler/: Cargo.toml  build.rs
transpiler/src/: cmake.rs  codegen.rs  codegen_tests.rs  inline_rust.rs  main.rs  metadata.rs  slots.rs  transpile.rs  types.rs
transpiler/src/codegen/: collect_passes.rs  emit_expr.rs  emit_items.rs  emit_stmt.rs  inference.rs  lookups.rs  mod.rs  name_resolver.rs  paths.rs  predicates.rs  symbol_category.rs  tests.rs  type_mapping.rs  type_solver.rs
transpiler/tests/: e2e_basic.rs  either_parity_harness.rs  parity_matrix_harness.rs  parity_test_verification.rs  runtime_move_semantics.rs  trait_pub_visibility.rs
(+776 files in other folders)
